# direct-trade-protocol

./: .gitignore  .mcp.json  GETTING_STARTED.md  README.md  SPEC.md  findings.md  progress.md  task_plan.md
contracts/: Cargo.toml
contracts/src/: events.rs  lib.rs  matching.rs  types.rs
docs/: FINANCE_LAYER.md  FREIGHT_LAYER.md  V1_ACCEPTANCE_CHECKLIST.md  V1_ACCEPTANCE_REPORT.md
mcp-server/: .env.example  package-lock.json  package.json
mcp-server/src/: account-manager.ts  errors.ts  index.ts  near-client.ts  type-builders.ts  types.ts
mcp-server/src/tools/: admin.ts  contract.ts  fulfillment.ts  intent.ts  listing.ts  matching.ts  offer.ts  party.ts  settlement.ts
remote-mcp-server/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  railway.toml
remote-mcp-server/src/: index.ts
remote-mcp-server/src/auth/: oauth.ts
remote-mcp-server/src/db/: client.ts  schema.ts
remote-mcp-server/src/identity/: identity-resolver.ts  member-manager.ts  org-manager.ts  trade-limits.ts
remote-mcp-server/src/near/: client.ts
remote-mcp-server/src/services/: notifications.ts  shippo.ts
remote-mcp-server/src/shared/: type-builders.ts
remote-mcp-server/src/tools/: contract.ts  freight.ts  fulfillment.ts  intent.ts  kyb.ts  listing.ts  matching.ts  offer.ts  org.ts  party.ts  settlement.ts
remote-mcp-server/src/transport/: http.ts
scripts/: deploy-testnet.sh  run_acceptance.sh
